[gd_scene load_steps=36 format=2]

[ext_resource path="res://img/runner/bg/veia.png" type="Texture" id=1]
[ext_resource path="res://img/runner/sprites/protnave.png" type="Texture" id=2]
[ext_resource path="res://scripts/player2.gd" type="Script" id=3]
[ext_resource path="res://img/runner/sprites/globolonaro.png" type="Texture" id=4]
[ext_resource path="res://scripts/globulonaro.gd" type="Script" id=5]
[ext_resource path="res://img/sprites/dialogBoxBoss.png" type="Texture" id=6]
[ext_resource path="res://scripts/runner.gd" type="Script" id=7]
[ext_resource path="res://img/sprites/nuvenBox.png" type="Texture" id=8]
[ext_resource path="res://scenes/gv1Spawner.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/gv2Spawner.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/gorduraSpawner.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/gordura2Spawner.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/gfSpawner.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/HUDrunner.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/virusSpawner.tscn" type="PackedScene" id=15]
[ext_resource path="res://img/animaNave/runner/run6.png" type="Texture" id=16]
[ext_resource path="res://img/animaNave/runner/run7.png" type="Texture" id=17]
[ext_resource path="res://img/animaNave/runner/run1.png" type="Texture" id=18]
[ext_resource path="res://img/animaNave/runner/run3.png" type="Texture" id=19]
[ext_resource path="res://img/animaNave/runner/run4.png" type="Texture" id=20]
[ext_resource path="res://img/animaNave/runner/run2.png" type="Texture" id=21]
[ext_resource path="res://img/animaNave/runner/run5.png" type="Texture" id=22]
[ext_resource path="res://img/animaNave/runner/dano1.png" type="Texture" id=23]
[ext_resource path="res://img/animaNave/runner/dano2.png" type="Texture" id=24]
[ext_resource path="res://song/runner.wav" type="AudioStream" id=25]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 21 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 22 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 23 ) ],
"loop": true,
"name": "dano",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25.0113, 18.3905 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 25.0116, 18.2858 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 24.6769, 16.7443 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 24.6065, 17.6201 )

[sub_resource type="CircleShape2D" id=6]
radius = 8.8582

[sub_resource type="CircleShape2D" id=7]
radius = 167.835

[sub_resource type="CircleShape2D" id=8]
radius = 175.936

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 697.136, 10 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 10, 233.327 )

[node name="runner" type="Node2D"]
position = Vector2( 0, 0.01651 )
script = ExtResource( 7 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="gv2Spawner" parent="ParallaxBackground" instance=ExtResource( 10 )]

[node name="gv1Spawner" parent="ParallaxBackground" instance=ExtResource( 9 )]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1024, 0 )

[node name="background" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color( 0.921569, 0.862745, 0.862745, 1 )
position = Vector2( 513.242, 299.019 )
texture = ExtResource( 1 )

[node name="gorduraSpawner" parent="." instance=ExtResource( 11 )]

[node name="gordura2Spawner" parent="." instance=ExtResource( 12 )]

[node name="gfSpawner" parent="." instance=ExtResource( 13 )]

[node name="VirusSpawner" parent="." instance=ExtResource( 15 )]

[node name="player2" type="KinematicBody2D" parent="."]
position = Vector2( 511.792, 304.806 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="playerBalao" type="Sprite" parent="player2"]
visible = false
modulate = Color( 0.9, 0.9, 0.9, 0.803922 )
position = Vector2( 121.531, -59.6016 )
scale = Vector2( 1.90173, 1.39182 )
texture = ExtResource( 8 )

[node name="playerTexto" type="Label" parent="player2"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 77.0
margin_top = -101.0
margin_right = 190.0
margin_bottom = -44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="AnimatedSprite" parent="player2"]
position = Vector2( -4.55609, 0.583984 )
frames = SubResource( 1 )
animation = "idle"

[node name="colisao" type="CollisionShape2D" parent="player2"]
position = Vector2( 0.105, 0.314 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="player2"]
collision_layer = 38
collision_mask = 38

[node name="colisaoArea" type="CollisionShape2D" parent="player2/Area2D"]
position = Vector2( 0.104675, 0.314016 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="player2"]
position = Vector2( 1.43188, 1.43195 )
current = true
limit_left = 0
limit_top = 0
limit_right = 50000
limit_bottom = 500
smoothing_enabled = true

[node name="Area2D2" type="Area2D" parent="player2"]

[node name="colisaoCorreta" type="CollisionShape2D" parent="player2/Area2D2"]
position = Vector2( -0.487671, -0.487671 )
shape = SubResource( 4 )

[node name="Area2D3" type="Area2D" parent="player2"]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="player2/Area2D3"]
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="player2"]
wait_time = 2.0
autostart = true

[node name="globulonaro" type="KinematicBody2D" parent="."]
position = Vector2( -157.059, 312.159 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="balao" type="Sprite" parent="globulonaro"]
visible = false
position = Vector2( 239.81, -92.4474 )
scale = Vector2( 1.35745, 1.21954 )
texture = ExtResource( 6 )

[node name="balaoTexto" type="Label" parent="globulonaro"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 188.55
margin_top = -141.0
margin_right = 275.55
margin_bottom = -65.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="globolonaro" type="Sprite" parent="globulonaro"]
scale = Vector2( 10.733, 10.733 )
texture = ExtResource( 4 )

[node name="colisao" type="CollisionShape2D" parent="globulonaro"]
shape = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="globulonaro"]
collision_layer = 4
collision_mask = 4

[node name="colisaoArea" type="CollisionShape2D" parent="globulonaro/Area2D"]
shape = SubResource( 7 )

[node name="Area2D2" type="Area2D" parent="globulonaro"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="globulonaro/Area2D2"]
shape = SubResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="globulonaro"]
position = Vector2( 683.658, -187.258 )
shape = SubResource( 9 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="globulonaro"]
position = Vector2( 689.198, 178.394 )
shape = SubResource( 9 )

[node name="lixeira" type="Area2D" parent="globulonaro"]
collision_layer = 960
collision_mask = 960

[node name="colisaoLixeira" type="CollisionShape2D" parent="globulonaro/lixeira"]
position = Vector2( -299.827, 3.87708 )
shape = SubResource( 10 )

[node name="HUD" parent="." instance=ExtResource( 14 )]

[node name="musica_runner" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )
volume_db = -33.0
[connection signal="area_entered" from="player2/Area2D" to="player2" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="player2/Area2D" to="player2" method="_on_Area2D_area_exited"]
[connection signal="area_entered" from="player2/Area2D2" to="globulonaro" method="_on_Area2D2_area_entered"]
[connection signal="area_exited" from="player2/Area2D2" to="player2" method="_on_Area2D2_area_exited"]
[connection signal="area_entered" from="player2/Area2D3" to="player2" method="_on_Area2D3_area_entered"]
[connection signal="area_exited" from="player2/Area2D3" to="player2" method="_on_Area2D3_area_exited"]
[connection signal="timeout" from="player2/Timer" to="player2" method="_on_Timer_timeout"]
[connection signal="area_entered" from="globulonaro/Area2D" to="player2" method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="globulonaro/Area2D2" to="player2" method="_on_Area2D2_area_entered"]
[connection signal="area_entered" from="globulonaro/lixeira" to="globulonaro" method="_on_lixeira_area_entered"]
